@@ -1,40 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-    
-    <ImageView
-        android:id="@+id/servericon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:src="@drawable/teamtalk_yellow"
-        android:contentDescription="@string/text_localserver" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@id/servericon"
-        android:orientation="vertical" >
- 
-        <TextView
-            android:id="@+id/server_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:text=""
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/server_summary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:text=""
-            android:textSize="14sp" />
-
-    </LinearLayout>
- 
-</RelativeLayout>
