@@ -21,6 +21,7 @@ Default Qt Client
 - Fixed language not set at first start
 - Fixed OPUS DTX mode sending too big packets when variable bitrate mode (VBR) was disabled
 Android Client
+- Ability to export each server in to a .tt file separately
 - Broadcast messages are now shown in the chat tab
 - Added the ability to send broadcast messages
 - Redesigned server list dialog to remove the old remove server button and make it to use popup menus, results in a more clear and modern dialog, and fast navigating for screenreader users
